--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Allura', cursive;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Allura", cursive;
 
-font-family: 'Roboto Serif', serif;
-
+  font-family: "Roboto Serif", serif;
 }
 body {
   font-family: Arial, sans-serif;
@@ -40,11 +39,10 @@ header img {
 
 nav {
   background-color: #555;
- 
 }
-.bar{
-  border-bottom: 1px solid black ;
-  border-width:2px ;
+.bar {
+  border-bottom: 1px solid black;
+  border-width: 2px;
   margin-right: 50px;
 }
 nav a {
@@ -101,88 +99,98 @@ footer {
   margin: 0 10px;
   color: #ffffff;
 }
-a{
+a {
   text-decoration: none;
-  color: #ffffff; 
+  color: #ffffff;
 }
-.give_detail{
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(212, 210, 210);
-     left: 20%;
-    transform: translate(-50%,10%); 
-    box-shadow: 10px 10px 5px lightblue;
-    display: none;
-    position:fixed;
-    top: 0;
-    opacity: 0;
-    animation: slideIn 0.2s forwards;
-    /* z-index: 2; */
+.give_detail {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(212, 210, 210);
+  left: 20%;
+  transform: translate(-50%, 10%);
+  box-shadow: 10px 10px 5px lightblue;
+  display: none;
+  position: fixed;
+  top: 0;
+  opacity: 0;
+  animation: slideIn 0.2s forwards;
+  /* z-index: 2; */
 }
 @keyframes slideIn {
-    from {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-    to {
-      transform: translateY(0);
-      
-      opacity: 1;
-    }
+  from {
+    transform: translateY(-50px);
+    opacity: 0;
   }
-.dropd:hover{
+  to {
+    transform: translateY(0);
+
+    opacity: 1;
+  }
+}
+.dropd:hover {
   color: rgb(120, 77, 226);
-  transition: .5s
+  transition: 0.5s;
 }
 .card-body {
-    background: rgb(233,249,231);
-background: linear-gradient(0deg, rgba(233,249,231,1) 0%);
+  background: rgb(233, 249, 231);
+  background: linear-gradient(0deg, rgba(233, 249, 231, 1) 0%);
 }
 .gradient-custom-2 {
   /* fallback for old browsers */
   background: #fccb90;
-  
+
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-  
+  background: -webkit-linear-gradient(
+    to right,
+    #ee7724,
+    #d8363a,
+    #dd3675,
+    #b44593
+  );
+
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: rgb(114,247,103);
-  background: linear-gradient(90deg, rgba(114,247,103,1) 3%, rgba(100,221,88,1) 41%, rgba(96,224,84,1) 100%);
-  }
-  
-  @media (min-width: 768px) {
+  background: rgb(114, 247, 103);
+  background: linear-gradient(
+    90deg,
+    rgba(114, 247, 103, 1) 3%,
+    rgba(100, 221, 88, 1) 41%,
+    rgba(96, 224, 84, 1) 100%
+  );
+}
+
+@media (min-width: 768px) {
   .gradient-form {
-  height: 100vh !important;
+    height: 100vh !important;
   }
-  }
-  @media (min-width: 769px) {
+}
+@media (min-width: 769px) {
   .gradient-custom-2 {
-  border-top-right-radius: .3rem;
-  border-bottom-right-radius: .3rem;
+    border-top-right-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
   }
-  }
-  .form-group {
-    position: relative;
-    margin-bottom: 1.5rem; /* Adjust the spacing as needed */
-  }
+}
+.form-group {
+  position: relative;
+  margin-bottom: 1.5rem; /* Adjust the spacing as needed */
+}
 
-  .form-control {
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid #ced4da; 
-  }
+.form-control {
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #ced4da;
+}
 
-  .form-label {
-    position: absolute;
-    top: 0.25rem;
-    left: 0.75rem;
-    transition: all 0.2s ease;
-    pointer-events: none; /* Ensure the label doesn't interfere with input focus */
-  }
+.form-label {
+  position: absolute;
+  top: 0.25rem;
+  left: 0.75rem;
+  transition: all 0.2s ease;
+  pointer-events: none; /* Ensure the label doesn't interfere with input focus */
+}
 
-  .form-control:focus + .form-label,
-  .form-control:not(:placeholder-shown) + .form-label {
-    font-size: 1rem;
-    left: -0.2rem;
-    top: -1.7rem;
-  }
-  
+.form-control:focus + .form-label,
+.form-control:not(:placeholder-shown) + .form-label {
+  font-size: 1rem;
+  left: -0.2rem;
+  top: -1.7rem;
+}
