--- a/output.css
+++ b/output.css
@@ -1130,6 +1130,19 @@ html {
   color: var(--fallback-bc,oklch(var(--bc)/0.3));
 }
 
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: var(--navbar-padding, 0.5rem);
+  min-height: 4rem;
+  width: 100%;
+}
+
+:where(.navbar > *) {
+  display: inline-flex;
+  align-items: center;
+}
+
 .progress {
   position: relative;
   width: 100%;
@@ -1548,20 +1561,6 @@ html {
   }
 }
 
-.label-text {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  --tw-text-opacity: 1;
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
-}
-
-.label-text-alt {
-  font-size: 0.75rem;
-  line-height: 1rem;
-  --tw-text-opacity: 1;
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
-}
-
 .input input:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1569,10 +1568,6 @@ html {
 
 .input[list]::-webkit-calendar-picker-indicator {
   line-height: 1em;
-}
-
-.input-bordered {
-  border-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
 .input:focus,
@@ -2107,7 +2102,6 @@ html {
   line-height: 1.5rem;
 }
 
-<<<<<<< HEAD
 .visible {
   visibility: visible;
 }
@@ -2126,10 +2120,6 @@ html {
 
 .sticky {
   position: sticky;
-=======
-.m-auto {
-  margin: auto;
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
 }
 
 .mx-1 {
@@ -2147,15 +2137,9 @@ html {
   margin-right: 1rem;
 }
 
-<<<<<<< HEAD
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-=======
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
 }
 
 .mb-0 {
@@ -2210,7 +2194,6 @@ html {
   margin-top: 1.25rem;
 }
 
-<<<<<<< HEAD
 .mt-60 {
   margin-top: 15rem;
 }
@@ -2233,17 +2216,12 @@ html {
 
 .table-row {
   display: table-row;
-=======
-.flex {
-  display: flex;
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
 }
 
 .grid {
   display: grid;
 }
 
-<<<<<<< HEAD
 .hidden {
   display: none;
 }
@@ -2258,56 +2236,19 @@ html {
 
 .flex-wrap {
   flex-wrap: wrap;
-=======
-.w-full {
-  width: 100%;
-}
-
-.max-w-xs {
-  max-width: 20rem;
-}
-
-.max-w-60 {
-  max-width: 15rem;
-}
-
-.max-w-96 {
-  max-width: 24rem;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[80\%\] {
-  max-width: 80%;
-}
-
-.items-stretch {
-  align-items: stretch;
-}
-
-.justify-center {
-  justify-content: center;
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
 }
 
 .text-nowrap {
   text-wrap: nowrap;
 }
 
-<<<<<<< HEAD
 .border {
   border-width: 1px;
-=======
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
 }
 
 .p-5 {
@@ -2365,37 +2306,22 @@ html {
   vertical-align: middle;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .font-black {
   font-weight: 900;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-black {
@@ -2429,7 +2355,6 @@ html {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-<<<<<<< HEAD
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2438,145 +2363,7 @@ html {
   transition-duration: 150ms;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Allura", cursive;
-  font-family: "Roboto Serif", serif;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header img {
-  max-width: 100px;
-  max-height: 100px;
-}
-
-/* Nav bar */
-
-.navbar-nav .nav-item:hover .dropdown-menu {
-  display: block;
-}
-
-nav {
-  background-color: #555;
-}
-
-.bar {
-  border-bottom: 1px solid black;
-  border-width: 2px;
-  margin-right: 50px;
-}
-
-nav a {
-  float: left;
-  display: block;
-  color: #fff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.main-content {
-  padding: 20px;
-}
-
-.product {
-  margin: 10px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #555;
-  color: #fff;
-}
-
-/* Style for the search bar */
-
-#search-bar {
-  margin: 10px auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#search-box {
-  padding: 8px;
-  font-size: 16px;
-}
-
-#search-button {
-  padding: 8px 16px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-/* Style for the login and cart sections */
-
-#login-section,
-#cart-section {
-  margin: 0 10px;
-  color: #ffffff;
-}
-
-a {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.give_detail {
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(212, 210, 210);
-  left: 20%;
-  transform: translate(-50%, 10%);
-  box-shadow: 10px 10px 5px lightblue;
-  display: none;
-  position: fixed;
-  top: 0;
-  opacity: 0;
-  animation: slideIn 0.2s forwards;
-  /* z-index: 2; */
-}
-
-@keyframes slideIn {
-  from {
-    transform: translateY(-50px);
-    opacity: 0;
-=======
 @media (min-width: 640px) {
-  .sm\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -2584,78 +2371,13 @@ a {
 }
 
 @media (min-width: 1024px) {
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .lg\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .lg\:text-8xl {
     font-size: 6rem;
     line-height: 1;
   }
-}
-<<<<<<< HEAD
-
-@media (min-width: 769px) {
-  .gradient-custom-2 {
-    border-top-right-radius: 0.3rem;
-    border-bottom-right-radius: 0.3rem;
-  }
-}
-
-.form-group {
-  position: relative;
-  margin-bottom: 1.5rem;
-  /* Adjust the spacing as needed */
-}
-
-.form-control {
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid #ced4da;
-}
-
-.form-label {
-  position: absolute;
-  top: 0.25rem;
-  left: 0.75rem;
-  transition: all 0.2s ease;
-  pointer-events: none;
-  /* Ensure the label doesn't interfere with input focus */
-}
-
-.form-control:not(:-moz-placeholder-shown) + .form-label {
-  font-size: 1rem;
-  left: -0.2rem;
-  top: -1.7rem;
-}
-
-.form-control:focus + .form-label,
-.form-control:not(:placeholder-shown) + .form-label {
-  font-size: 1rem;
-  left: -0.2rem;
-  top: -1.7rem;
-}
-
-@media (min-width: 1024px) {
-  .lg\:inline-block {
-    display: inline-block;
-  }
 
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
-=======
->>>>>>> 39e7c6fc8751706c1c28416296724c3e00424dfc
