--- a/output.css
+++ b/output.css
@@ -2142,6 +2142,11 @@ html {
   margin-bottom: 0.5rem;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -2200,6 +2205,10 @@ html {
 
 .mt-80 {
   margin-top: 20rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
