--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,8 +322,8 @@ hr {
 }
 
 .section-padding {
-    padding-top: 120px;
-    padding-bottom: 120px
+    padding-top: 30px;
+    padding-bottom: 50px
 }
 
 .separator {
@@ -2286,39 +2286,7 @@ hr {
     }
 }
 
-.footer-padding {
-    padding-top: 440px;
-    padding-bottom: 70px
-}
 
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .footer-padding {
-        padding-top: 440px;
-        padding-bottom: 70px
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .footer-padding {
-        padding-top: 440px;
-        padding-bottom: 0px
-    }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .footer-padding {
-        
-        padding-top: 375px;
-        padding-bottom: 0px
-    }
-}
-
-@media (max-width: 575px) {
-    .footer-padding {
-        padding-top: 375px;
-        padding-bottom: 0px
-    }
-}
 
 @media (max-width: 575px) {
     .section-tittle {
@@ -2539,7 +2507,7 @@ hr {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     .header-area .main-header .main-menu2 ul li a {
-        padding: 17px 20px !important
+        padding: 1px 20px !important
     }
 }
 
@@ -2551,7 +2519,7 @@ hr {
 
 @media (max-width: 575px) {
     .header-area .main-header .main-menu2 ul li a {
-        padding: 17px 20px !important
+        padding: 13px 14px !important
 
 
     }
@@ -2559,7 +2527,7 @@ hr {
 
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
     .header-area .main-header .main-menu {
-        margin-right: 30px
+        margin-right: 20px
     }
 }
 
@@ -2572,7 +2540,7 @@ hr {
 .header-area .main-header .main-menu ul li a {
     color: #112957;
     font-weight: 400;
-    padding: 29px 27px;
+    padding: 20px 20px;
     display: block;
     font-size: 16px;
     -webkit-transition: .3s;
@@ -3135,92 +3103,13 @@ hr {
     width: 100%
 }
 
-.about-low-area {
-    margin-bottom: -314px;
-    position: relative
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .about-low-area .about-caption {
-        padding-left: 89px
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .about-low-area .about-caption {
-        padding-left: 89px
-    }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .about-low-area .about-caption {
-        padding-left: 60px
-    }
-}
-
-@media (max-width: 575px) {
-    .about-low-area .about-caption {
-        padding-left: 25px
-    }
-}
-
-.about-low-area .about-caption .section-tittle h2 {
-    color: #fff
-}
-
-.about-low-area .about-caption p {
-    font-size: 26px;
-    color: #fff;
-    line-height: 1.6;
-    margin-bottom: 43px;
-    padding-right: 50px;
-    font-weight: 300
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .about-low-area .about-caption p {
-        padding-right: 20px
-    }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .about-low-area .about-caption p {
-        padding-right: 0px
-    }
-}
-
-@media (max-width: 575px) {
-    .about-low-area .about-caption p {
-        padding-right: 0px;
-        font-size: 19px
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .about-low-area .about-img {
-        padding-top: 100px
-    }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .about-low-area .about-img {
-        padding-top: 100px
-    }
-}
-
-@media (max-width: 575px) {
-    .about-low-area .about-img {
-        padding-top: 100px
-    }
-}
-
-.about-low-area .about-img .about-font-img {
+ .about-font-img {
     position: relative;
     z-index: 1;
     right: -1px
 }
 
-.about-low-area .about-img .about-font-img img {
+.about-font-img img {
     width: 100%
 }
 
@@ -3230,61 +3119,7 @@ hr {
     }
 }
 
-.about-cap-wrapper {
-    position: relative
-}
 
-.about-cap-wrapper::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 536px;
-    background: #5AAC4E;
-    top: -108px;
-    border-radius: 0 0 0 156px
-}
-
-@media (max-width: 575px) {
-    .about-cap-wrapper::before {
-        height: 437px;
-        border-radius: 0 0 0 56px;
-        top: -73px
-    }
-}
-
-.about-cap-wrapper::after {
-    position: absolute;
-    bottom: 92px;
-    content: "";
-    border-top: 62px solid #5AAC4E;
-    border-left: 800px solid transparent;
-    left: 139px;
-    z-index: -1
-}
-
-@media (max-width: 575px) {
-    .about-cap-wrapper::after {
-        content: unset
-    }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-    .about-cap-wrapper::after {
-        content: unset
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .about-cap-wrapper::after {
-        content: unset
-    }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .about-cap-wrapper::after {
-        content: unset
-    }
-}
 
 .founder-img {
     margin-left: -15px
@@ -4033,7 +3868,7 @@ hr {
     font-size: 16px;
     margin: 0;
     padding: 0;
-    margin-bottom: 13px;
+    margin-bottom: 5px;
     display: inline-block
 }
 
