--- a/style_login.css
+++ b/style_login.css
@@ -22,8 +22,8 @@ body {
   background: #fccb90;
   
   /* Chrome 10-25, Safari 5.1-6 */
-  background: rgb(114,247,103);
-background: linear-gradient(90deg, rgba(114,247,103,1) 3%, rgba(100,221,88,1) 41%, rgba(96,224,84,1) 100%);
+  background: #a0d388;
+background: linear-gradient(90deg,#bafca6f0 3%, #9aeb8a  41%, #8bf56a  100%);
 
   }
   
